--- a/light.html
+++ b/light.html
@@ -35,7 +35,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-	<meta name="keywords" content="programmer">
+	<meta name="keywords" content="resume">
 	<meta name="description" content="Noor's CV">
 	<meta name="author" content="Noor Raj">
 	<title>Noor Raj</title>
@@ -54,13 +54,15 @@
 	<div class="content-wrapper">
 		<div class="v-center">
 			<div class="main-content" id="blurred" style="text-align:center; margin:auto; font-family: 'Amiri', 'Raleway', sans-serif; -webkit-filter: blur(7px); filter: blur(7px); -webkit-transition-duration: 0.6s; transition-duration: 0.6s;">
-				<img src="eightbit_me.png" style="object-fit: cover; height: 150px;">
+				<img src="Noor.png" style="object-fit: cover; height: 300px;">
 				<p style="cursor:text">Hello, my name is Noor Raj!
 					<br /> I'm a ambitious programmer interested in opportunities.
 					<br /> 
 					<br /> Check out my <a id="link-console" href="console/">Suicide Prevention Project</a>!
-					<br /> I've also got a <a target="_blank" href="resume">traditional resume</a>, and also  <a target="_blank" href="cv-min">more about me blog</a>.
+					<br /> I've also got a <a target="_blank" href="#">traditional resume</a>, and also  <a target="_blank" href="console/robots/index.html">more about me blog</a>.
+					<br /> <a target="_blank" href="index.html">Are you a vampire, check out my dark IDE format!</a>
 					<br />
+					
 					<a href="https://www.facebook.com/noor.raj.7"><i class="fa fa-facebook" aria-hidden="true"></i></a>					&nbsp;
 					<a href="https://www.instagram.com/noorraj27/"><i class="fa fa-instagram" aria-hidden="true"></i></a>					&nbsp;
 					<a href="https://github.com/NoorASC4"><i class="fa fa-github" aria-hidden="true"></i></a>					&nbsp;
