--- a/console/robots/index.html
+++ b/console/robots/index.html
@@ -3,30 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Priansh's Robots</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400">
-  <link rel="apple-touch-icon" sizes="57x57" href="../../icons/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="../../icons/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="../../icons/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="../../icons/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="../../icons/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="../../icons/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="../../icons/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="../../icons/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="../../icons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="../../icons/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../../icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="../../icons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../../icons/favicon-16x16.png">
-  <link rel="manifest" href="../../icons/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="../../icons/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-	<meta name="keywords" content="Priansh,Shah,Priansh Shah,website,resume,developer,coder,programmer,hire,python,github,js,javascript,nodejs,react,aiko ai,aiko,gleme,glemeapp,gleme app">
-  
+  <title>Raj's AutoBio</title>
+	<meta name="keywords" content="Noor Raj, Majidul Mooktadeer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-
-
   <link rel="stylesheet" href="css/style.css">
 
 
@@ -135,27 +114,9 @@
   </div>
   <!-- /.container -->
   <div style="display:block; padding-top: 50px;">
-    <p>FTC: <b>Co-Captain</b> 2 Years</p>
-    <p>FTC: <b>Head of Code</b> 2 Years</p>
-    <p>FTC: Participant <b>4 Years</b></p>
-    <p>VEX: <b>Coder</b> 1 Year</p>
-    <p>FTC Team Lancer Robotics #3415: Member 2013-15</p>
-    <p>FTC Team Fawkes Robotics #10919: <b>Founder</b> 2015-17</p>
-    <p>FTC <b>World Championships THINK Award</b> 14-15</p>
-    <p>FTC World Championships <b>Semi-finalist Alliance</b> 14-15</p>
-    <p>FTC <b>Super Regionals THINK Award</b> 13-14</p>
-    <p>FTC <b>Super Regionals THINK Award</b> 14-15</p>
-    <p>FTC <b>Super Regionals Finalist Alliance</b> 14-15</p>
-    <p>FTC <b>State Championships THINK Award</b> 13-14</p>
-    <p>FTC <b>State Championships Inspire Award</b> 14-15</p>
-    <p>FTC <b>State Championships Winning Alliance</b> 14-15</p>
-    <p>FTC <b>State Championships Promote Runner Up</b> 15-16</p>
-    <p>FTC <b>Qualifier THINK Award</b> 13-14</p>
-    <p>FTC <b>Qualifier INSPIRE</b> 14-15, 15-16</p>
-    <p>FTC <b>Qualifier PTC Design Award</b> 15-16</p>
-    <p>FTC <b>Qualifier Control Award</b></p>
-    <p>VEX 15-16 <b>Robot Skills High Score</b></p>
-    <p>VEX 15-16 States <b>Semi-Finalist Alliance</b></p>
+   <p><b>Bronx Science Graduate.</b></p>
+   <p><b>Future Software Engineer.</b></p>
+   <p><b>Robotics, Happy New Years @Noor</b></p>
   </div>
 </body>
 
