--- a/light.html
+++ b/light.html
@@ -2,18 +2,16 @@
 <html lang="en" style="cursor:crosshair">
 
 <head>
-	<!-- Global Site Tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-47879725-4"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131439092-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-		function gtag() {
-			dataLayer.push(arguments)
-		};
-		gtag('js', new Date());
-
-		gtag('config', 'UA-47879725-4');
-	</script>
+  gtag('config', 'UA-131439092-1');
+  
+</script>
 	<link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
