--- a/console/robots/index.html
+++ b/console/robots/index.html
@@ -23,7 +23,7 @@
 <body>
   <div class="container" style="width: 50%; padding-left: 26%;">
 
-    <svg id="robot" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 -10 960 570">
+    <svg id="robot" version="1.1" xmlns="http://www.w3.org/2000/svg" viewbox="0 -10 960 570">
 
       <g class="head">
         <g class="levitate">
