--- a/console/robots/index.html
+++ b/console/robots/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131439092-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-131439092-1');
-  
-</script>
 <head>
   <meta charset="UTF-8">
-  <title>Raj's AutoBio</title>
-	<meta name="keywords" content="Noor Raj, Majidul Mooktadeer">
+  <title>Noor Raj: Blog</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400">
+  <link rel="apple-touch-icon" sizes="57x57" href="../../icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="../../icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="../../icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../../icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="../../icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="../../icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="../../icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../../icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../../icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="../../icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../icons/favicon-16x16.png">
+  <link rel="manifest" href="../../icons/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="../../icons/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+	<meta name="keywords" content="Robotics">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
+
   <link rel="stylesheet" href="css/style.css">
 
 
@@ -23,7 +35,7 @@
 <body>
   <div class="container" style="width: 50%; padding-left: 26%;">
 
-    <svg id="robot" version="1.1" xmlns="http://www.w3.org/2000/svg" viewox="0 -10 960 570">
+    <svg id="robot" version="1.1" xmlns="http://www.w3.org/2000/svg" viewbox="0 -10 960 570">
 
       <g class="head">
         <g class="levitate">
@@ -123,9 +135,11 @@
   </div>
   <!-- /.container -->
   <div style="display:block; padding-top: 50px;">
-   <p><b>Bronx Science Graduate.</b></p>
-   <p><b>Future Software Engineer.</b></p>
-   <p><b>Robotics, Happy New Years @Noor</b></p>
+   <p><b>Bronx Science Graduate</b></p>
+   <p><b>Passionate about Computer Science</b></p>
+   <p><b>Freshmen at Binghamton</b></p>
+   <p><b>Software Engineer?</b></p>
+   <p><b>Happy New Years @noorRaj</b></p>
   </div>
 </body>
 
