Restless optimistic nights

--- a/console/robots/index.html
+++ b/console/robots/index.html
@@ -140,7 +140,7 @@
    <p><b>Freshmen at Binghamton</b></p>
    <p><b>Software Engineer?</b></p>
    <p><b>Happy New Years @noorRaj</b></p>
-   <p><a target="_blank_" href="/index.html"><y>Prev</y></a></p>
+   <p><a href="/index.html"><y>Prev</y></a></p>
   </div>
 </body>
 
