--- a/light.html
+++ b/light.html
@@ -58,7 +58,7 @@
 					<br /> 
 					<br /> Check out my <a id="link-console" href="console/">Suicide Prevention Project</a>!
 					<br /> I've also got a <a target="_blank" href="#">traditional resume</a>, and also  <a target="_blank" href="console/robots/index.html">more about me blog</a>.
-					<br /> <a target="_blank" href="index.html">Are you a vampire, check out my dark IDE format!</a>
+					<br /> <a href="index.html">Are you a vampire, check out my dark IDE format!</a>
 					<br />
 					
 					<a href="https://www.facebook.com/noor.raj.7"><i class="fa fa-facebook" aria-hidden="true"></i></a>					&nbsp;
