--- a/console/robots/index.html
+++ b/console/robots/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131439092-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-131439092-1');
+</script>
 <head>
   <meta charset="UTF-8">
   <title>Noor Raj: Blog</title>
