--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
 					<br /> I'm a ambitious programmer interested in opportunities.
 					<br /> 
 					<br /> Check out my <a id="link-console" href="console/">Suicide Prevention Project</a>!
-					<br /> I've also got a <a target="_blank" href="#">traditional resume</a>, and also  <a target="_blank" href="console/robots/index.html">more about me blog</a>.
+					<br /> I've also got a <a href="#">traditional resume</a>, and also  <a href="console/robots/index.html">more about me blog</a>.
 					<br /> <a href="light.html">Check out my light IDE format!</a>
 					<br />
 					
 					<a href="https://www.facebook.com/noor.raj.7"><i class="fa fa-facebook" aria-hidden="true"></i></a>					&nbsp;
 					<a href="https://www.instagram.com/noorraj27/"><i class="fa fa-instagram" aria-hidden="true"></i></a>					&nbsp;
 					<a href="https://github.com/NoorASC4"><i class="fa fa-github" aria-hidden="true"></i></a>					&nbsp;
+					<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>					&nbsp;
 				</p>
 				<div style="height:20px"></div>
 			</div>
