--- a/light.html
+++ b/light.html
@@ -57,7 +57,7 @@
 					<br /> I'm a ambitious programmer interested in opportunities.
 					<br /> 
 					<br /> Check out my <a id="link-console" href="console/">Suicide Prevention Project</a>!
-					<br /> I've also got a <a target="_blank" href="#">traditional resume</a>, and also  <a target="_blank" href="console/robots/index.html">more about me blog</a>.
+					<br /> I've also got a <a href="#">traditional resume</a>, and also  <a href="console/robots/index.html">more about me blog</a>.
 					<br /> <a href="index.html">Are you a vampire, check out my dark IDE format!</a>
 					<br />
 					
