--- a/HTMLS/index.html
+++ b/HTMLS/index.html
@@ -39,7 +39,7 @@
 	<title>Noor Raj</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400">
 	<link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="/css/main.css">
 	<script src="https://use.fontawesome.com/47466b9360.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700|Righteous|Raleway">
 	<!--[if lt IE 9]>
