--- a/HTMLS/light.html
+++ b/HTMLS/light.html
@@ -52,7 +52,7 @@
 	<div class="content-wrapper">
 		<div class="v-center">
 			<div class="main-content" id="blurred" style="text-align:center; margin:auto; font-family: 'Amiri', 'Raleway', sans-serif; -webkit-filter: blur(7px); filter: blur(7px); -webkit-transition-duration: 0.6s; transition-duration: 0.6s;">
-					<img src="images/Noor.png" alt="8-bit Pic" style="object-fit: cover; height: 300px;">
+					<img src="/HTMLS/Images/39991413_2155526398059310_6166033926935543808_n.jpg" alt="8-bit Pic" style="object-fit: cover; height: 300px;">
 				<p style="cursor:text">Hello, my name is Noor Raj!
 					<br /> I'm a ambitious programmer interested in opportunities.
 					<br /> 
