I really messed up

--- a/light.html
+++ b/light.html
@@ -2,7 +2,7 @@
 <html lang="en" style="cursor:crosshair">
 
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131439092-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,8 +10,8 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-131439092-1');
+  
 </script>
-
 	<link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
@@ -39,7 +39,7 @@
 	<title>Noor Raj</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400">
 	<link href="https://fonts.googleapis.com/css?family=Amiri" rel="stylesheet">
-	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="css/light.css">
 	<script src="https://use.fontawesome.com/47466b9360.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700|Righteous|Raleway">
 	<!--[if lt IE 9]>
@@ -52,19 +52,18 @@
 	<div class="content-wrapper">
 		<div class="v-center">
 			<div class="main-content" id="blurred" style="text-align:center; margin:auto; font-family: 'Amiri', 'Raleway', sans-serif; -webkit-filter: blur(7px); filter: blur(7px); -webkit-transition-duration: 0.6s; transition-duration: 0.6s;">
-				<img src="Noor.png" alt="8-bit Img" style="object-fit: cover; height: 300px;">
+					<img src="/HTMLS/Images/39991413_2155526398059310_6166033926935543808_n.jpg" alt="8-bit Pic" style="object-fit: cover; height: 300px;">
 				<p style="cursor:text">Hello, my name is Noor Raj!
 					<br /> I'm a ambitious programmer interested in opportunities.
 					<br /> 
 					<br /> Check out my <a id="link-console" href="console/">Suicide Prevention Project</a>!
 					<br /> I've also got a <a href="#">traditional resume</a>, and also  <a href="console/robots/index.html">more about me blog</a>.
-					<br /> <a href="light.html">Check out my light IDE format!</a>
+					<br /> <a href="index.html">Are you a vampire, check out my dark IDE format!</a>
 					<br />
 					
 					<a href="https://www.facebook.com/noor.raj.7"><i class="fa fa-facebook" aria-hidden="true"></i></a>					&nbsp;
 					<a href="https://www.instagram.com/noorraj27/"><i class="fa fa-instagram" aria-hidden="true"></i></a>					&nbsp;
 					<a href="https://github.com/NoorASC4"><i class="fa fa-github" aria-hidden="true"></i></a>					&nbsp;
-					<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>					&nbsp;
 				</p>
 				<div style="height:20px"></div>
 			</div>
