--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div class="main-content" id="blurred" style="text-align:center; margin:auto; font-family: 'Amiri', 'Raleway', sans-serif; -webkit-filter: blur(7px); filter: blur(7px); -webkit-transition-duration: 0.6s; transition-duration: 0.6s;">
 				<img src="/HTMLS/Images/39991413_2155526398059310_6166033926935543808_n.jpg" alt="8-bit Img" style="object-fit: cover; height: 300px;">
 				<p style="cursor:text">Hello, my name is Noor Raj!
-					<br /> I'm a ambitious programmer interested in opportunities.
+					<br /> I'm an ambitious programmer interested in opportunities.
 					<br /> 
 					<br /> Check out my <a id="link-console" href="console/">Suicide Prevention Project</a>!
 					<br /> I've also got a <a href="#">traditional resume</a>, and also  <a href="console/robots/index.html">more about me blog</a>.
